# forkbombs

./: .gitignore  .gitmodules  Bomb.java  BombApplet.java  README  README.md  Rakefile  bomb.bat  bomb.c  bomb.erl  bomb.hs  bomb.html  bomb.php  bomb.pl  bomb.py  bomb.rb  bomb.rs  bomb.scm  bomb.vbs  killbomb.sh  killbomb.zsh  package.json  sh
bash/: Makefile  README.md
bash/lib/: bomb.sh
c/: .gitignore  CMakeLists.txt  README.md
c/lib/: bomb.c
cpp/: CMakeLists.txt
cpp/lib/: bomb.cpp
erlang/: README.md  bomb.erl
go/: .gitignore  Makefile
go/forkbomb/: Makefile  README.md  forkbomb.go  magefile.go
go/forkbomb/cmd/forkbomb/: main.go
gotpl/: README.md  infiniteloop.gotpl
haskell/: README.md
java/bomb-applet/: build.gradle
java/bomb-applet/src/main/us/yellosoft/forkbomb/: package-info.java
java/bomb-threads/: build.gradle
java/bomb-threads/src/main/us/yellosoft/forkbomb/: package-info.java
jvm/java/bomb-applet/: build.gradle
jvm/java/bomb-applet/src/main/us/yellosoft/forkbomb/: BombApplet.java  package-info.java
jvm/java/bomb-threads/: build.gradle
jvm/java/bomb-threads/src/main/us/yellosoft/forkbomb/: Bomb.java  package-info.java
lua/: README.md
perl/: README.md  bomb.pl
php/: README.md
python/: README.md
ruby/: README.md
rust/: Cargo.toml  DEVELOPMENT.md  Makefile  README.md  rick.rs  tinyrick.rs
scheme/: README.md  bomb.scm
unix-shells/posix-shells/bash/: README.md
unix-shells/posix-shells/bash/lib/: bomb.sh
