[package]

name = "forkbomb"
version = "0.0.1"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]

[dependencies]
tinyrick = { version = "0.0.6", optional = true }
tinyrick_extras = { version = "0.0.1", optional = true }

[features]
letmeout = ["tinyrick", "tinyrick_extras"]

[[bin]]
name = "bomb"
path = "src/bin/bomb.rs"

[[bin]]
name = "rick"
path = "rick.rs"
required-features = ["letmeout"]
